--- a/style.css
+++ b/style.css
@@ -25,10 +25,14 @@ div#gallery {
 div#comments {
     /*background-color: #396;*/
     /*align-items: center;*/
-    /*vertical-align: middle;*/
+    vertical-align: middle;
     /*display: inline-block;*/
     /*margin: auto;*/
     /*display: table-cell;*/
+}
+
+div#contacts {
+    background-color: #A0DEDB;
 }
 
 .centering {
@@ -88,12 +92,12 @@ span.stock {
     text-align: center;
 }
 
-form {
+form.gift {
   border: solid black 2px;
   float: right;
   margin: 40px 40px;
   background-color:rgba(255,229,169,0.5);
-  opacity: 99%;
+  /*opacity: 99%;*/
 }
 
 div.about {
@@ -242,8 +246,9 @@ table.gallery img.lupa {
 	width: 33.33333333%;
 	height: 100%;
 	color: white;
+  background-color: #DACAA4;
 }
-.carousel-item-blue {
+/*.carousel-item-blue {
 	background-color: blue;
 }
 .carousel-item-red {
@@ -251,7 +256,7 @@ table.gallery img.lupa {
 }
 .carousel-item-green {
 	background-color: green;
-}
+}*/
 .carousel-labels {
 	position: absolute;
 	z-index: 2;
@@ -297,11 +302,54 @@ table.gallery img.lupa {
 }
 
 .comment {
-  width: 150px;
-  /*height: 100%;*/
+  /*width: 150px;*/
+  height: 200px;
   float: left;
   margin: auto;
 }
 
 
+.commentOut {
+  position:relative;
+}
+
+.commentIn {
+  position:absolute;
+  height: 200px;
+  /*width: 200px;*/
+  top:50%;
+  margin-top:-100px;
+  margin-left: 5%;
+}
+
 /*-----------COMMENTS ENDS--------*/
+
+/*-----------CONTACTS STARTS-----------*/
+
+#map {
+  width: 40%;
+  height: 300px;
+  margin: 30px 30px 30px 80px;
+  float: left;
+}
+
+.contactAddr {
+  background-color:rgba(255,229,169,0.5);
+  opacity: 0.3;
+  width: 300px;
+  float: right;
+  margin: 30px;
+  padding: 30px;
+}
+
+form.map {
+  border: solid black 2px;
+  float: right;
+  width: 300px;
+  margin: 40px 40px;
+  background-color:rgba(255,229,169,0.5);
+  padding: 30px;
+  /*opacity: 99%;*/
+}
+
+/*-----------CONTACTS ENDS-----------*/
