--- a/style.css
+++ b/style.css
@@ -10,9 +10,11 @@ body {
 }
 
 div#gift {
-    background-image: url("imgs/party-celebration-balloons-yellow-burst-13895723.jpg");
+    /*background-image: url("imgs/party-celebration-balloons-yellow-burst-13895723.jpg") no-repeat center center fixed;*/
+    background: url("imgs/party-celebration-balloons-yellow-burst-13895723.jpg") no-repeat;
+    background-size: cover;
     align-items: center;
-    vertical-align: middle;
+    /*vertical-align: middle;*/
 }
 
 div#aboutUs {
@@ -39,6 +41,7 @@ div#contacts {
 .centering {
   margin: auto;
   text-align: center;
+  vertical-align: middle;
   width: 100%;
 }
 
@@ -91,24 +94,26 @@ img.logo {
 
 img[name=gift] {
   height: 200px;
-  margin: 30px 50px 0px 150px;
+  margin: 30px 30px 0px 0px;
 }
 
 span.stock {
     font-family: "Times New Roman", Times, serif;
-    /*display: inline-block;*/
+    display: inline-block;
     font-size: 20pt;
     font-style: oblique;
     color: red;
-    width: 200px;
+    min-width: 200px;
+    max-width: 400px;
     text-align: center;
 }
 
 form.gift {
+  display: inline-block;
   border: solid black 2px;
-  float: right;
+  /*float: right;*/
   margin: 40px 40px;
-  padding: 20px;
+  padding: 15px;
   background-color:rgba(255,229,169,0.5);
   /*opacity: 99%;*/
 }
@@ -128,7 +133,7 @@ input.submitForm {
 div.about {
   display: inline-block;
   height: 230px;
-  width: 200px;
+  width: 300px;
   margin: 20px;
   background-color: green;
 
@@ -213,9 +218,9 @@ table {
   }
 
 table.gallery img.picture {
-  width: 100px;
-  height: 100px;
-  margin: 10px;
+  width: 160px;
+  height: 160px;
+  margin: 20px;
   position: relative;
   top: 0;
   left: 0;
@@ -227,8 +232,8 @@ table.gallery img.picture:hover {
 
 table.gallery img.lupa {
   position: absolute;
-  top: 35px;
-  left: 40px;
+  top: 60px;
+  left: 60px;
   width:50%;
 }
 
@@ -328,14 +333,6 @@ table.gallery img.lupa {
 	background-color: black;
 }
 
-.comment {
-  /*width: 150px;*/
-  height: 200px;
-  float: left;
-  margin: auto;
-}
-
-
 .commentOut {
   position:relative;
 }
@@ -366,7 +363,28 @@ table.gallery img.lupa {
   float: right;
   width: 400px;
   background:#f3961c;
+  font: italic 14px Georgia;
 }
+
+
+.comment {
+  /*width: 150px;*/
+  height: 200px;
+  float: left;
+  margin: auto;
+}
+
+.circular {
+	width: 150px;
+	height: 150px;
+	border-radius: 50%;
+	/*-webkit-border-radius: 150px;
+	-moz-border-radius: 150px;*/
+	background: url(http://link-to-your/image.jpg) no-repeat;
+	box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+	-webkit-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+	-moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+	}
 
 /*-----------COMMENTS ENDS--------*/
 
