--- a/style.css
+++ b/style.css
@@ -217,7 +217,7 @@ table {
     margin: 0 auto; /* or margin: 0 auto 0 auto */
   }
 
-table.gallery img.picture {
+img.picture {
   width: 160px;
   height: 160px;
   margin: 20px;
@@ -226,11 +226,11 @@ table.gallery img.picture {
   left: 0;
 }
 
-table.gallery img.picture:hover {
+img.picture:hover {
     opacity: 0.3;
 }
 
-table.gallery img.lupa {
+img.lupa {
   position: absolute;
   top: 60px;
   left: 60px;
@@ -240,6 +240,27 @@ table.gallery img.lupa {
 .caption {
     display: block;
 }
+
+/*dt, dd, dl {
+    margin:0;
+    padding:0;
+    border-spacing:0;
+}
+dl {
+    display:table;
+    width:50%;
+}
+dt, dd {
+    width:50%;
+    display:block;
+}
+@media only screen and (min-width:760px) {
+    dl, dt, dd {
+        width:20%;
+        float:left;
+      }
+}*/
+
 /*-------------GALERY ENDS----------*/
 
 
@@ -279,6 +300,7 @@ table.gallery img.lupa {
 	width: 33.33333333%;
 	height: 100%;
   background-color: #DACAA4;
+
 }
 /*.carousel-item-blue {
 	background-color: blue;
@@ -338,12 +360,10 @@ table.gallery img.lupa {
 }
 
 .commentIn {
-  position:absolute;
+  position:relative;;
   height: 200px;
-  /*width: 200px;*/
   top:50%;
   margin-top:-100px;
-  margin-left: 5%;
 }
 
 .textComment {
@@ -360,7 +380,8 @@ table.gallery img.lupa {
   -moz-border-radius:10px;
   border-radius:10px;
   /*margin-left:50px;*/
-  float: right;
+  /*float: left;*/
+  display: inline-block;
   width: 400px;
   background:#f3961c;
   font: italic 14px Georgia;
@@ -369,9 +390,9 @@ table.gallery img.lupa {
 
 .comment {
   /*width: 150px;*/
-  height: 200px;
+  /*height: 200px;
   float: left;
-  margin: auto;
+  margin: auto;*/
 }
 
 .circular {
