--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@ body {
   display: inline-block;
 }
 
+.content {
+  width: 1200px;
+}
+
 div#gift {
     /*background-image: url("imgs/party-celebration-balloons-yellow-burst-13895723.jpg") no-repeat center center fixed;*/
     background: url("imgs/party-celebration-balloons-yellow-burst-13895723.jpg") no-repeat;
@@ -223,29 +227,33 @@ div.about {
   position: relative;
   /*left: 0;
   top: 0;*/
+  width: 95%;
+  height: 95%;
   background-color: white;
-
+  border: solid black 2px;
+  margin: 5px;
 }
 
 img.picture {
-  max-width: 160px;
-  max-height: 160px;
-  /*margin: 20px;*/
-  position: relative;
-  top: 0;
-  left: 0;
+  max-width: 100%;
+  max-height: 100%;
+  position: absolute;
+  top:0;
+  bottom:0;
+  margin:auto;
 }
 
-/*img.picture:hover {
+img.picture:hover {
     opacity: 0.3;
-}*/
+}
 
 img.lupa {
   position: absolute;
-  /*top: 60px;
-  left: 60px;*/
-  max-width: 160px;
-  max-height: 160px;
+  max-width: 30%;
+  max-height: 30%;
+  top:0;
+  bottom:0;
+  margin:auto;
 }
 
 /*.caption {
