--- a/style.css
+++ b/style.css
@@ -157,6 +157,7 @@ nav {
   width: 1200px;
   display: block;
   position: relative;
+  height: 100%;
 }
 
 div#gift .content{
@@ -191,7 +192,7 @@ div#contacts .content{
 .centering {
   margin: auto;
   text-align: center;
-  vertical-align: middle;
+  /*vertical-align: middle;*/
   /*width: 100%;*/
 }
 
@@ -413,10 +414,10 @@ dt, dd {
 }
 
 .carousel-wrapper {
-  height: 100%;
+  height: 80%;
 	width: 100%;
 	position: relative;
-	padding-bottom: 30%;
+	/*padding-bottom: 30%;*/
 	background-color: #eee;
 	overflow: hidden;
 }
@@ -534,48 +535,85 @@ dt, dd {
 	-moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
 	}
 
-  @media (max-width: 601px) {
-    div#comments .content{
-      height: 250px;
+  @media (max-width: 400px) {
+    div#comments{
+      height: 350px;
     }
     .textComment {
       width: 90%;
       padding:5px;
     }
     .circular {
-      width: 120px;
-      height: 120px;
+      width: 90px;
+      height: 90px;
     }
   }
 
-  @media (min-width: 600px) {
+  @media (min-width: 401px) and (max-width: 599px) {
+    div#comments .content{
+      height: 450px;
+    }
+    .textComment {
+      width: 90%;
+      padding:5px;
+    }
+    .circular {
+      width: 170px;
+      height: 170px;
+    }
+  }
+
+  @media (min-width: 600px) and (max-width: 799px){
+    div#comments .content{
+      height: 500px;
+    }
     .textComment {
       width: 100%;
       padding:5px;
     }
     .circular {
-      width: 120px;
-      height: 120px;
+      width: 220px;
+      height: 220px;
+    }
+  }
+
+  @media (min-width: 800px) and (max-width: 999px){
+    div#comments .content{
+      height: 600px;
+    }
+    .textComment {
+      width: 100%;
+      padding:5px;
+    }
+    .circular {
+      width: 250px;
+      height: 250px;
     }
   }
 
   @media (min-width: 1000px) {
+    div#comments .content{
+      height: 600px;
+    }
     .textComment {
       width: 600px;
     }
     .circular {
-      width: 150px;
-      height: 150px;
+      width: 300px;
+      height: 300px;
     }
   }
 
   @media (min-width: 1400px) {
+    div#comments .content{
+      height: 600px;
+    }
     .textComment {
       width: 800px;
     }
     .circular {
-      width: 200px;
-      height: 200px;
+      width: 320px;
+      height: 320px;
     }
   }
 
